force-app/main/default/objects/dsalesProveedores__c/dsalesProveedores__c.object-meta.xml
<CustomObject>
    <description>Objeto que guardara el registro de los proveedores de servicios y seguros</description>
    <label>Proveedores</label>
    <nameField>
        <label>Nombre del Proveedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>