force-app/main/default/objects/dsalesProveedores__c/fields/dsalesActivo__c.field-meta.xml
<CustomField>
    <fullName>dsalesActivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hace referencia al estatus del proveedor</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>