force-app/main/default/objects/dsalesProveedores__c/fields/dsalesSubtipo__c.field-meta.xml
<CustomField>
    <fullName>dsalesSubtipo__c</fullName>
    <description>subtipo de proveedor a utilizar</description>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dsalesTipoProveedor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GEX</fullName>
            </value>
            <value>
                <fullName>Armado</fullName>
            </value>
            <value>
                <fullName>Instalaciones</fullName>
            </value>
            <value>
                <fullName>Seguro de Motos</fullName>
            </value>
            <value>
                <fullName>Seguro de Celulares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>