force-app/main/default/objects/dsalesProveedores__c/fields/dsalesTipoProveedor__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipoProveedor__c</fullName>
    <description>tipo de proveedor a registrar</description>
    <label>Tipo de proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>