force-app/main/default/objects/dsalesProveedores__c/recordTypes/dsalesServicios.recordType-meta.xml
<RecordType>
    <fullName>dsalesServicios</fullName>
    <active>true</active>
    <description>Registros pertenecientes a un servicio (GEX, Armado e Instalaciones)</description>
    <label>Servicio</label>
</RecordType>