force-app/main/default/objects/dsalesProveedores__c/recordTypes/Seguros.recordType-meta.xml
<RecordType>
    <fullName>Seguros</fullName>
    <active>true</active>
    <description>Registros pertenecientes a un seguro (Motos o Celulares)</description>
    <label>Seguros</label>
</RecordType>