force-app/main/default/objects/dsalesProveedores__c/recordTypes/Servicios.recordType-meta.xml
<RecordType>
    <fullName>Servicios</fullName>
    <active>true</active>
    <description>Registros pertenecientes a un servicio (GEX, Armado e Instalaciones)</description>
    <label>Servicios</label>
</RecordType>